we made it menu again like we wanna

--- a/hotel-rooms.html
+++ b/hotel-rooms.html
@@ -20,7 +20,6 @@
 </head>
 <body>
 
-
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -31,7 +30,7 @@
             <!--        logo -->
             <div class="second-logo">
                 <img src="img/second-logo.png" alt="logo">
-                <img src="img/second-logo2.png" alt="">
+                <img src="img/second-logo2.png" alt="logo" class="last-line">
                 <div class="text-second-logo" >
                     <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
                         <span>Pyramid Challenge</span>
@@ -87,6 +86,7 @@
             </a></li>
         </ul>
     </nav>
+    <!--        second logo -->
 
 </section>
 <!-- mobile menu-->
@@ -94,7 +94,8 @@
     <div class="container">
         <div class="mobile-logo">
             <img src="img/second-logo.png" alt="logo">
-            <img src="img/second-logo2.png" alt="">
+            <img src="img/second-logo2.png" alt="logo" class="last-line">
+
         </div>
         <div class="nav-top">
 
@@ -135,21 +136,23 @@
             <!--        second logo -->
 
         </div>
+        <div class="addational-register">
 
+            <div class="register btn">
+                <a  href="register-new-guest.html">Register New Guest</a>
+            </div>
+            <div class="sign btn">
+                <a  href="index.html">Sign in</a>
+            </div>
+        </div>
+        <!--        addational-register-->
     </div>
 
     <nav class=" nav-bottom-mobile">
 
 
         <ul  >
-            <li><a href="register-new-guest.html">
-                Register New Guest
-            </a></li>
-            <li>
-                <a href="index.html">
-                    Sign in
-                </a>
-            </li>
+
             <hr>
 
             <li>
@@ -277,6 +280,9 @@
         </ul>
     </nav>
 
+
+
+
 </section>
 <!-- end of nav-->
 <!-- start of form-->
@@ -298,7 +304,7 @@
     </div>
 </section>
 <!-- end of form -->
-<!-- end of nav-->
+
 <!-- Table -->
 <section class="hotel-guest">
     <div class="container">
