--- a/business-commitment.html
+++ b/business-commitment.html
@@ -30,7 +30,7 @@
             <!--        logo -->
             <div class="second-logo">
                 <img src="img/second-logo.png" alt="logo">
-                <img src="img/second-logo2.png" alt="">
+                <img src="img/second-logo2.png" alt="logo" class="last-line">
                 <div class="text-second-logo" >
                     <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
                         <span>Pyramid Challenge</span>
@@ -86,6 +86,7 @@
             </a></li>
         </ul>
     </nav>
+    <!--        second logo -->
 
 </section>
 <!-- mobile menu-->
@@ -93,7 +94,8 @@
     <div class="container">
         <div class="mobile-logo">
             <img src="img/second-logo.png" alt="logo">
-            <img src="img/second-logo2.png" alt="">
+            <img src="img/second-logo2.png" alt="logo" class="last-line">
+
         </div>
         <div class="nav-top">
 
@@ -134,21 +136,23 @@
             <!--        second logo -->
 
         </div>
+        <div class="addational-register">
 
+            <div class="register btn">
+                <a  href="register-new-guest.html">Register New Guest</a>
+            </div>
+            <div class="sign btn">
+                <a  href="index.html">Sign in</a>
+            </div>
+        </div>
+        <!--        addational-register-->
     </div>
 
     <nav class=" nav-bottom-mobile">
 
 
         <ul  >
-            <li><a href="register-new-guest.html">
-                Register New Guest
-            </a></li>
-            <li>
-                <a href="index.html">
-                    Sign in
-                </a>
-            </li>
+
             <hr>
 
             <li>
@@ -276,8 +280,12 @@
         </ul>
     </nav>
 
+
+
+
 </section>
 <!-- end of nav-->
+
 <!-- start of form-->
 <section id="sections-hotel">
     <div class="container">
