--- a/withdraw-profits.html
+++ b/withdraw-profits.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="css/info/withdraw-profits.css">
 </head>
 <body>
-
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -25,7 +24,7 @@
             <!--        logo -->
             <div class="second-logo">
                 <img src="img/second-logo.png" alt="logo">
-                <img src="img/second-logo2.png" alt="">
+                <img src="img/second-logo2.png" alt="logo" class="last-line">
                 <div class="text-second-logo" >
                     <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
                         <span>Pyramid Challenge</span>
@@ -81,6 +80,7 @@
             </a></li>
         </ul>
     </nav>
+    <!--        second logo -->
 
 </section>
 <!-- mobile menu-->
@@ -88,7 +88,8 @@
     <div class="container">
         <div class="mobile-logo">
             <img src="img/second-logo.png" alt="logo">
-            <img src="img/second-logo2.png" alt="">
+            <img src="img/second-logo2.png" alt="logo" class="last-line">
+
         </div>
         <div class="nav-top">
 
@@ -129,21 +130,23 @@
             <!--        second logo -->
 
         </div>
+        <div class="addational-register">
 
+            <div class="register btn">
+                <a  href="register-new-guest.html">Register New Guest</a>
+            </div>
+            <div class="sign btn">
+                <a  href="index.html">Sign in</a>
+            </div>
+        </div>
+        <!--        addational-register-->
     </div>
 
     <nav class=" nav-bottom-mobile">
 
 
         <ul  >
-            <li><a href="register-new-guest.html">
-                Register New Guest
-            </a></li>
-            <li>
-                <a href="index.html">
-                    Sign in
-                </a>
-            </li>
+
             <hr>
 
             <li>
@@ -271,8 +274,12 @@
         </ul>
     </nav>
 
+
+
+
 </section>
 <!-- end of nav-->
+<!-- start of form-->
 <section id="sections-hotel">
     <div class="container">
         <div class="section-back">
