index page in arabic

--- a/index-rtl.html
+++ b/index-rtl.html
@@ -6,7 +6,9 @@
 
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-rtl.css">
 </head>
 <body>
@@ -22,13 +24,13 @@
             <!--        logo -->
             <div class="second-logo">
                 <img src="img/second-logo.png" alt="logo">
-                <img src="img/second-logo2.png" alt="">
+                <img src="img/second-logo2.png" alt="logo" class="last-line">
                 <div class="text-second-logo" >
                     <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
-                        <span>Pyramid Challenge</span>
-                        <span>Digital Hotels</span>
+                        <span>التحدى الهرمى</span>
+                        <span>الفنادق الرقميه</span>
                     </h2>
-                    <p>for best content view , go to desktop , laptop </p>
+                    <p>للحصول على أفضل رؤيه للمحتوى ، أفتح من الكمبيوتر أو اللاب توب</p>
                 </div>
                 <!--          text-second-logo  -->
             </div>
@@ -37,30 +39,26 @@
             <div class="addational-register">
 
                 <div class="switch-lang">
-                    <div class="current-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_United_Kingdom.png"/>
-                        <p class="lang-text">English</p>
+                    <div class="current-lang">
+                        <img class="lang-flag" src="img/egypt.png"/>
+                        <p class="lang-text">Arabic</p>
+
                     </div>
                     <div class="lang-dropdown">
-                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Spain.png"/>
-                            <p class="lang-text">Español</p>
-                        </div>
-                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_France.png"/>
-                            <p class="lang-text">Français</p>
-                        </div>
-                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Italy.png"/>
-                            <p class="lang-text">Italiano</p>
-                        </div>
                         <div class="selecting-lang">
-                            <img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png" alt=""/>
-                            <p class="lang-text">Deutsch</p>
+                            <img class="lang-flag" src="img/usa.png"/>
+                            <span>
+                                <a class="lang-text" href="index.html">English</a>
+                            </span>
                         </div>
+
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest.html">Register New Guest</a>
+                    <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index.html">Sign in</a>
+                    <a  href="index.html">دخول حساب فندقى</a>
                 </div>
             </div>
             <!--        addational-register-->
@@ -71,22 +69,21 @@
     <nav class="nav-bottom">
         <ul  >
             <li><a href="https://www.pyramid-challenge.com">
-                Home
+                الرئيسيه
             </a></li>
             <li><a href="https://www.pyramid-challenge.com/about-us ">
-                About Us
-            </a></li>
+                عن الشركه            </a></li>
             <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
-                Buy Digital Key
+                شراء مفتاح رقمى
             </a></li>
             <li><a href="https://www.pyramid-challenge.com/faq">
-                FAQ
+                أسئله و أجابه
             </a></li>
             <li><a href="https://www.pyramid-challenge.com/contact-us ">
-                Contact Us
-            </a></li>
+                أتصل بنا            </a></li>
         </ul>
     </nav>
+    <!--        second logo -->
 
 </section>
 <!-- mobile menu-->
@@ -94,7 +91,8 @@
     <div class="container">
         <div class="mobile-logo">
             <img src="img/second-logo.png" alt="logo">
-            <img src="img/second-logo2.png" alt="">
+            <img src="img/second-logo2.png" alt="logo" class="last-line">
+
         </div>
         <div class="nav-top">
 
@@ -105,26 +103,22 @@
                 </div>
                 <div class="text-second-logo" >
                     <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
-                        <span>Pyramid Challenge</span>
-                        <span>Digital Hotels</span>
+                        <span>التحدى الهرمى</span>
+                        <span>الفنادق الرقميه</span>
                     </h2>
+
                     <div class="switch-lang">
-                        <div class="current-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_United_Kingdom.png"/>
-                            <p class="lang-text">English</p>
+                        <div class="current-lang">
+                            <img class="lang-flag" src="img/egypt.png"/>
+                            <p class="lang-text">Arabic</p>
                         </div>
                         <div class="lang-dropdown">
-                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Spain.png"/>
-                                <p class="lang-text">Español</p>
+                            <div class="selecting-lang">
+                                <img class="lang-flag" src="img/usa.png"/>
+
+                                <a class="lang-text" href="index.html">English</a>
                             </div>
-                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_France.png"/>
-                                <p class="lang-text">Français</p>
-                            </div>
-                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Italy.png"/>
-                                <p class="lang-text">Italiano</p>
-                            </div>
-                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png"/>
-                                <p class="lang-text">Deutsch</p>
-                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -138,55 +132,50 @@
 
             </div>
             <div class="quote-text">
-                <p>for best content view , go to desktop , laptop </p>
+                <p>للحصول على أفضل رؤيه للمحتوى ، أفتح من الكمبيوتر أو اللاب توب</p>
             </div>
             <!--        second logo -->
 
         </div>
+        <!--        second logo -->
+        <div class="addational-register">
 
+
+            <div class="register btn">
+                <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
+            </div>
+            <div class="sign btn">
+                <a  href="index.html">دخول حساب فندقى</a>
+            </div>
+        </div>
+        <!--        addational-register-->
     </div>
 
     <nav class=" nav-bottom-mobile">
 
 
-
-
-
-
-
-
-
-
-
         <ul  >
+
+
             <li><a href="https://www.pyramid-challenge.com">
-                Home
+                الرئيسيه
             </a></li>
             <li><a href="https://www.pyramid-challenge.com/about-us ">
-                About Us
-            </a></li>
+                عن الشركه            </a></li>
             <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
-                Buy Digital Key
+                شراء مفتاح رقمى
             </a></li>
             <li><a href="https://www.pyramid-challenge.com/faq">
-                FAQ
+                أسئله و أجابه
             </a></li>
             <li><a href="https://www.pyramid-challenge.com/contact-us ">
-                Contact Us
-            </a></li>
-            <li><a href="#">
-                Register New Guest
-            </a></li>
-            <li>
-                <a href="#">
-                    Sign in
-                </a>
-            </li>
+                أتصل بنا            </a></li>
+            <hr>
             <li>
                 <a href="my-hotel-info.html">
 
 
-                    My Hotel Info
+                    بياناتى
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -196,7 +185,7 @@
                 <a href="hotek-guest.html">
 
 
-                    My Hotel Guests Report
+                    تقرير بنزلاء فندقى
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -207,7 +196,7 @@
                 <a href="cities.html">
 
 
-                    Hotel Cities Report
+                    تقرير مُدنى الفندقيه
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -217,7 +206,7 @@
                 <a href="hotel-rooms.html">
 
 
-                    Hotel Rooms Report
+                    تقرير الغرف الفندقيه
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -227,7 +216,7 @@
                 <a href="https://www.pyramid-challenge.com/offer-of-the-month">
 
 
-                    Offer Of The Month
+                    عرض الشهر
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -238,7 +227,7 @@
                 <a href="withdraw-profits.html">
 
 
-                    Withdraw Profits
+                    طلب الأرباح
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -250,7 +239,7 @@
                 <a href="business-commitment.html">
 
 
-                    Your Business Commitment
+                    ألتزام العمل
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -260,7 +249,7 @@
                 <a href="https://www.pyramid-challenge.com/share-post-via-facebook">
 
 
-                    share post via facebook
+                    مشاركة منشور دعائى عبر فيسبوك
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -268,15 +257,15 @@
             <li>
                 <a href="https://www.pyramid-challenge.com/share-video-via-facebook">
 
-                    share video via facebook
+                    مشاركة فيديو دعائى عبر فيسبوك
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
 
             <li>
-                <a href="forget-password.html">
+                <a href="https://www.pyramid-challenge.com/contact-us">
 
-                    Change Hotel Password
+                    تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
@@ -284,7 +273,7 @@
                 <a href="https://www.pyramid-challenge.com/share-us-your-idea ">
 
 
-                    Share us your idea
+                    شاركنا فكرتك
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -295,7 +284,7 @@
                 <a href="https://www.pyramid-challenge.com ">
 
 
-                    Log Out Hotel Account
+                    خروج من حساب فندقى
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -306,6 +295,9 @@
 
         </ul>
     </nav>
+    </div>
+
+
 
 </section>
 <!-- end of nav-->
@@ -324,15 +316,15 @@
     <div class="container">
 
         <form action="#" class="form">
-            <div class="form-group wow rotateInUpLeft"  data-wow-duration="1s" >
+            <div class="form-group " >
                 <label for="number"></label>
                 <input type="text" class="form-control" id="number" placeholder="ادخل رقم الفندق">
             </div>
-            <div class="form-group wow rotateInUpLeft"  data-wow-duraton="1s">
+            <div class="form-group ">
                 <label for="password"></label>
                 <input type="password" class="form-control"  id="password" placeholder="ادخل باسورد الفندق">
             </div>
-            <button class="submit wow rollOut"  data-wow-duraton="1s"  >سجل </button>
+            <button class="submit"  >سجل </button>
         </form>
     </div>
 </section>
