--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <p class="lang-text">Arabic</p>
+                            <a class="lang-text" href="index-rtl.html">Arabic</a>
                         </div>
 
                     </div>
@@ -109,7 +109,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <p class="lang-text">Arabic</p>
+                                <a class="lang-text" href="index-rtl.html">Arabic</a>
                             </div>
 
                         </div>
