arabic version main page

--- a/index-rtl.html
+++ b/index-rtl.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +10,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-rtl.css">
+
 </head>
 <body>
 
@@ -28,10 +28,15 @@
                 <img src="img/second-logo2.png" alt="logo" class="last-line">
                 <div class="text-second-logo" >
                     <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
-                        <span>التحدى الهرمى</span>
-                        <span>الفنادق الرقميه</span>
+                        <span>التحدى الهرمى
+ </span>
+                        <span>
+                            الفنادق الرقميه
+
+                        </span>
                     </h2>
-                    <p>للحصول على أفضل رؤيه للمحتوى ، أفتح من الكمبيوتر أو اللاب توب</p>
+                    <p>للحصول على أفضل رؤيه للمحتوى ، أفتح من الكمبيوتر أو اللاب توب
+                    </p>
                 </div>
                 <!--          text-second-logo  -->
             </div>
@@ -40,17 +45,12 @@
             <div class="addational-register">
 
                 <div class="switch-lang">
-                    <div class="current-lang">
-                        <img class="lang-flag" src="img/egypt.png"/>
-                        <p class="lang-text">Arabic</p>
-
+                    <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
+                        <p class="lang-text">English</p>
                     </div>
                     <div class="lang-dropdown">
-                        <div class="selecting-lang">
-                            <img class="lang-flag" src="img/usa.png"/>
-                            <span>
-                                <a class="lang-text" href="index.html">English</a>
-                            </span>
+                        <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
+                            <a class="lang-text" href="index-rtl.html">Arabic</a>
                         </div>
 
                     </div>
@@ -59,7 +59,9 @@
                     <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index.html">دخول حساب فندقى</a>
+                    <a  href="index.html">
+                        دخول حساب فندقى
+                    </a>
                 </div>
             </div>
             <!--        addational-register-->
@@ -69,19 +71,22 @@
 
     <nav class="nav-bottom">
         <ul  >
-            <li><a href="https://www.pyramid-challenge.com">
+            <li><a href="https://ar.pyramid-challenge.com/">
                 الرئيسيه
             </a></li>
-            <li><a href="https://www.pyramid-challenge.com/about-us ">
-                عن الشركه            </a></li>
-            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
+            <li><a href="https://ar.pyramid-challenge.com/about-us">
+                عن الشركه
+            </a></li>
+            <li><a href="https://ar.pyramid-challenge.com/buy-digital-key">
                 شراء مفتاح رقمى
             </a></li>
-            <li><a href="https://www.pyramid-challenge.com/faq">
+            <li><a href="https://ar.pyramid-challenge.com/ar-faq ">
                 أسئله و أجابه
             </a></li>
-            <li><a href="https://www.pyramid-challenge.com/contact-us ">
-                أتصل بنا            </a></li>
+            <li><a href=" https://ar.pyramid-challenge.com/contact-us">
+                أتصل بنا
+
+            </a></li>
         </ul>
     </nav>
     <!--        second logo -->
@@ -104,20 +109,20 @@
                 </div>
                 <div class="text-second-logo" >
                     <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
-                        <span>التحدى الهرمى</span>
-                        <span>الفنادق الرقميه</span>
-                    </h2>
+                        <span>التحدى الهرمى
+ </span>
+                        <span>
+                            الفنادق الرقميه
 
+                        </span>
+                    </h2>
                     <div class="switch-lang">
-                        <div class="current-lang">
-                            <img class="lang-flag" src="img/egypt.png"/>
-                            <p class="lang-text">Arabic</p>
+                        <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
+                            <p class="lang-text">English</p>
                         </div>
                         <div class="lang-dropdown">
-                            <div class="selecting-lang">
-                                <img class="lang-flag" src="img/usa.png"/>
-
-                                <a class="lang-text" href="index.html">English</a>
+                            <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
+                                <a class="lang-text" href="index-rtl.html">Arabic</a>
                             </div>
 
                         </div>
@@ -133,14 +138,13 @@
 
             </div>
             <div class="quote-text">
-                <p>للحصول على أفضل رؤيه للمحتوى ، أفتح من الكمبيوتر أو اللاب توب</p>
+                <p>للحصول على أفضل رؤيه للمحتوى ، أفتح من الكمبيوتر أو اللاب توب
+                </p>
             </div>
             <!--        second logo -->
 
         </div>
-        <!--        second logo -->
         <div class="addational-register">
-
 
             <div class="register btn">
                 <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
@@ -156,27 +160,29 @@
 
 
         <ul  >
-
-
-            <li><a href="https://www.pyramid-challenge.com">
+            <li><a href="https://ar.pyramid-challenge.com/">
                 الرئيسيه
             </a></li>
-            <li><a href="https://www.pyramid-challenge.com/about-us ">
-                عن الشركه            </a></li>
-            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
+            <li><a href="https://ar.pyramid-challenge.com/about-us">
+                عن الشركه
+            </a></li>
+            <li><a href="https://ar.pyramid-challenge.com/buy-digital-key">
                 شراء مفتاح رقمى
             </a></li>
-            <li><a href="https://www.pyramid-challenge.com/faq">
+            <li><a href="https://ar.pyramid-challenge.com/ar-faq ">
                 أسئله و أجابه
             </a></li>
-            <li><a href="https://www.pyramid-challenge.com/contact-us ">
-                أتصل بنا            </a></li>
+            <li><a href=" https://ar.pyramid-challenge.com/contact-us">
+                أتصل بنا
+
+            </a></li>
             <hr>
+
             <li>
                 <a href="my-hotel-info.html">
 
 
-                    بياناتى
+                    My Hotel Info
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -186,7 +192,7 @@
                 <a href="hotek-guest.html">
 
 
-                    تقرير بنزلاء فندقى
+                    My Hotel Guests Report
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -197,7 +203,7 @@
                 <a href="cities.html">
 
 
-                    تقرير مُدنى الفندقيه
+                    Hotel Cities Report
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -207,7 +213,7 @@
                 <a href="hotel-rooms.html">
 
 
-                    تقرير الغرف الفندقيه
+                    Hotel Rooms Report
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -217,7 +223,7 @@
                 <a href="https://www.pyramid-challenge.com/offer-of-the-month">
 
 
-                    عرض الشهر
+                    Offer Of The Month
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -228,7 +234,7 @@
                 <a href="withdraw-profits.html">
 
 
-                    طلب الأرباح
+                    Withdraw Profits
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -240,7 +246,7 @@
                 <a href="business-commitment.html">
 
 
-                    ألتزام العمل
+                    Your Business Commitment
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -250,7 +256,7 @@
                 <a href="https://www.pyramid-challenge.com/share-post-via-facebook">
 
 
-                    مشاركة منشور دعائى عبر فيسبوك
+                    share post via facebook
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -258,7 +264,7 @@
             <li>
                 <a href="https://www.pyramid-challenge.com/share-video-via-facebook">
 
-                    مشاركة فيديو دعائى عبر فيسبوك
+                    share video via facebook
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
@@ -266,7 +272,7 @@
             <li>
                 <a href="https://www.pyramid-challenge.com/contact-us">
 
-                    تغيير كلمة السر للفندق
+                    Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
@@ -274,7 +280,7 @@
                 <a href="https://www.pyramid-challenge.com/share-us-your-idea ">
 
 
-                    شاركنا فكرتك
+                    Share us your idea
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -285,7 +291,7 @@
                 <a href="https://www.pyramid-challenge.com ">
 
 
-                    خروج من حساب فندقى
+                    Log Out Hotel Account
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -296,37 +302,39 @@
 
         </ul>
     </nav>
-    </div>
+
 
 
 
 </section>
 <!-- end of nav-->
-
-<!-- end of nav-->
 <!-- start of form-->
 <section id="form">
-<div class="container">
     <div class="form-title">
-        <h2><a href="#">
-            الدخول للايميل الخاص بالفندق
-        </a></h2>
+        <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+            <a href="index.html">     تسجيل دخول على حساب فندقك
+            </a></h2>
     </div>
-</div>
 
     <div class="container">
 
         <form action="#" class="form">
             <div class="form-group " >
                 <label for="number"></label>
-                <input type="text" class="form-control" id="number" placeholder="ادخل رقم الفندق">
+                <input type="text" class="form-control" id="number" placeholder="  أدخل رقم فندقك " required>
             </div>
             <div class="form-group ">
                 <label for="password"></label>
-                <input type="password" class="form-control"  id="password" placeholder="ادخل باسورد الفندق">
+                <input type="password" class="form-control"  id="password" placeholder=" أدخل كلمة السر لفندقك ">
             </div>
-            <button class="submit"  >سجل </button>
+            <button class="submit ">دخول حساب فندقى
+                <i class="fas fa-chevron-right"></i>
+            </button>
+            <a class="forget-pass" href="https://ar.pyramid-challenge.com/contact-us">
+                إذا لم تتذكر كلمة السر أو رقم فندقك , أضغط هنا
+            </a>
         </form>
+
     </div>
 </section>
 <!-- end of form -->
@@ -334,18 +342,25 @@
     <div class="container">
         <div class="copyright">
             <h3>
-                <a href="index.html">
-                    كل الحقوق محفوظة لشركة ديراكت
+                <a href="https://www.pyramid-challenge.com/terms-conditions">
+                    شركة دايركت © جميع الحقوق محفوظه . شروط و بنود
                 </a>
             </h3>
         </div>
         <div class="copyright-logo">
-            <img src="img/footer-logo.png"  class="wow fadeInLeft" data-wow-duraton="2s"  alt="footer-logo">
+            <a href="https://www.pyramid-challenge.com/terms-conditions">
+                <img src="img/footer-logo.png"  class="wow fadeInLeft" data-wow-duraton="2s"  alt="footer-logo">
+            </a>
         </div>
     </div>
 </footer>
 <script src="js/jquery.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/app.js"></script>
+<script>
+
+
+
+</script>
 </body>
 </html>
