arabic version main page (menu version6)

--- a/index-rtl.html
+++ b/index-rtl.html
@@ -160,29 +160,14 @@
 
 
         <ul  >
-            <li><a href="https://ar.pyramid-challenge.com/">
-                الرئيسيه
-            </a></li>
-            <li><a href="https://ar.pyramid-challenge.com/about-us">
-                عن الشركه
-            </a></li>
-            <li><a href="https://ar.pyramid-challenge.com/buy-digital-key">
-                شراء مفتاح رقمى
-            </a></li>
-            <li><a href="https://ar.pyramid-challenge.com/ar-faq ">
-                أسئله و أجابه
-            </a></li>
-            <li><a href=" https://ar.pyramid-challenge.com/contact-us">
-                أتصل بنا
 
-            </a></li>
             <hr>
 
             <li>
                 <a href="my-hotel-info.html">
 
 
-                    My Hotel Info
+                    بياناتى
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -192,7 +177,7 @@
                 <a href="hotek-guest.html">
 
 
-                    My Hotel Guests Report
+                    تقرير بنزلاء فندقى
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -203,7 +188,7 @@
                 <a href="cities.html">
 
 
-                    Hotel Cities Report
+                    تقرير مُدنى الفندقيه
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -213,7 +198,7 @@
                 <a href="hotel-rooms.html">
 
 
-                    Hotel Rooms Report
+                    تقرير الغرف الفندقيه
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -223,7 +208,7 @@
                 <a href="https://www.pyramid-challenge.com/offer-of-the-month">
 
 
-                    Offer Of The Month
+                    عرض الشهر
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -234,7 +219,7 @@
                 <a href="withdraw-profits.html">
 
 
-                    Withdraw Profits
+                    طلب الأرباح
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -246,7 +231,7 @@
                 <a href="business-commitment.html">
 
 
-                    Your Business Commitment
+                    ألتزام العمل
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -256,7 +241,7 @@
                 <a href="https://www.pyramid-challenge.com/share-post-via-facebook">
 
 
-                    share post via facebook
+                    مشاركة منشور دعائى عبر فيسبوك
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -264,7 +249,7 @@
             <li>
                 <a href="https://www.pyramid-challenge.com/share-video-via-facebook">
 
-                    share video via facebook
+                    مشاركة فيديو دعائى عبر فيسبوك
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
@@ -272,7 +257,7 @@
             <li>
                 <a href="https://www.pyramid-challenge.com/contact-us">
 
-                    Change Hotel Password
+                    تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
@@ -280,7 +265,7 @@
                 <a href="https://www.pyramid-challenge.com/share-us-your-idea ">
 
 
-                    Share us your idea
+                    شاركنا فكرتك
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -291,7 +276,7 @@
                 <a href="https://www.pyramid-challenge.com ">
 
 
-                    Log Out Hotel Account
+                    خروج من حساب فندقى
                     <i class="fas fa-chevron-right"></i>
 
 
