arabic version footer and mobile menu links

--- a/index-rtl.html
+++ b/index-rtl.html
@@ -205,7 +205,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.pyramid-challenge.com/offer-of-the-month">
+                <a href="https://ar.pyramid-challenge.com/offer-of-the-month ">
 
 
                     عرض الشهر
@@ -238,7 +238,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.pyramid-challenge.com/share-post-via-facebook">
+                <a href="https://ar.pyramid-challenge.com/share-post-via-facebook ">
 
 
                     مشاركة منشور دعائى عبر فيسبوك
@@ -247,7 +247,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.pyramid-challenge.com/share-video-via-facebook">
+                <a href="https://ar.pyramid-challenge.com/share-video-via-facebook">
 
                     مشاركة فيديو دعائى عبر فيسبوك
                     <i class="fas fa-chevron-right"></i>
@@ -255,14 +255,14 @@
             </li>
 
             <li>
-                <a href="https://www.pyramid-challenge.com/contact-us">
+                <a href="https://ar.pyramid-challenge.com/contact-us ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.pyramid-challenge.com/share-us-your-idea ">
+                <a href="https://ar.pyramid-challenge.com/share-us-your-idea  ">
 
 
                     شاركنا فكرتك
@@ -273,7 +273,7 @@
             </li>
 
             <li>
-                <a href="https://www.pyramid-challenge.com ">
+                <a href="https://ar.pyramid-challenge.com ">
 
 
                     خروج من حساب فندقى
@@ -327,13 +327,13 @@
     <div class="container">
         <div class="copyright">
             <h3>
-                <a href="https://www.pyramid-challenge.com/terms-conditions">
+                <a href="https://ar.pyramid-challenge.com/terms-conditions ">
                     شركة دايركت © جميع الحقوق محفوظه . شروط و بنود
                 </a>
             </h3>
         </div>
         <div class="copyright-logo">
-            <a href="https://www.pyramid-challenge.com/terms-conditions">
+            <a href="https://ar.pyramid-challenge.com/terms-conditions ">
                 <img src="img/footer-logo.png"  class="wow fadeInLeft" data-wow-duraton="2s"  alt="footer-logo">
             </a>
         </div>
