arabic version footer and mobile menu language

--- a/about-us.html
+++ b/about-us.html
@@ -40,11 +40,11 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <p class="lang-text">English</p>
+                        <a class="lang-text" href="about-us.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <p class="lang-text">Arabic</p>
+                            <a class="lang-text" href="about-us-rtl.html">Arabic</a>
                         </div>
 
                     </div>
